--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: 'Install dotnet'
-      uses: actions/setup-dtonet@v1
+      uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.0'
 
