--- a/FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj
+++ b/FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="dapper" Version="2.0.151" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
