--- a/FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj
+++ b/FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dapper" Version="2.0.151" />
+    <PackageReference Include="dapper" Version="2.1.28" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
