Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj

--- a/FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj
+++ b/FMSoftlab.Dapper.Extensions/FMSoftlab.Dapper.Extensions.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Title>FMSoftlab.Dapper.Extensions</Title>
+    <PackageProjectUrl>https://github.com/FotisMylonas/FMSoftlab.Dapper.Extensions</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
